Rank sobol sensitivity algorithm
Add of new class dealing with the estimation of Sobol indices with rank-based algorithm

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -653,6 +653,7 @@ endif ()
 ot_check_test (ANCOVA_std)
 ot_check_test (FAST_std)
 ot_check_test (SobolIndicesAlgorithm_std)
+ot_check_test (RankSobolSensitivityAlgorithm_std IGNOREOUT)
 ot_check_test (HSICStat_std IGNOREOUT)
 ot_check_test (HSICEstimatorConditionalSensitivity_std IGNOREOUT)
 ot_check_test (HSICEstimatorGlobalSensitivity_std IGNOREOUT)
