--- a/python/src/Contour_doc.i.in
+++ b/python/src/Contour_doc.i.in
@@ -3,11 +3,9 @@
 
 Available constructors:
 
-    Contour(*dimX, dimY, data, isFilled=True, colorMap='viridis'*)
+    Contour(*dimX, dimY, data*)
 
-    Contour(*sampleX, sampleY, data, levels, labels, drawLabels=True, legend=' '*)
-
-    Contour(*sampleX, sampleY, data, isFilled=True, colorMap='viridis'*)
+    Contour(*sampleX, sampleY, data*)
 
 Parameters
 ----------
@@ -21,21 +19,6 @@ data : 2-d sequence of float of dimension 1 and of size :math:`dimX*dimY`
 sampleX, sampleY : two 2-d sequences of float of dimension 1
     First and second coordinates. If not specified the points are equally
     spaced in :math:`[0, 1]` along the :math:`X` and :math:`Y`-directions.
-levels : sequence of float
-    Levels where the contour will be drawn. If two points of the grid have
-    values bracketing the *level*, a linear interpolation is made in order to
-    find the point associated to the *level* considered.
-labels : sequence of str
-    Labels of each curve associated to one *level*. By default, the labels are
-    the values of the *levels*.
-drawLabels : bool
-    Flag telling if the labels of the iso-curves must be explicited or not.
-legend : str
-    Legend of the Contour.
-isFilled : bool
-    Flag telling if the contour must be filled or not.
-colorMap : str
-    Name of the color map used to color the contour
 
 Examples
 --------
@@ -83,7 +66,10 @@ Using the second constructor:
 >>> labels = ['Level 0', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5']
 >>> drawLabels = True
 >>> # Create the contour and plot it
->>> myContour = ot.Contour(x, y, outputSample, levels, labels, drawLabels)
+>>> myContour = ot.Contour(x, y, outputSample)
+>>> myContour.setLevels(levels)
+>>> myContour.setLabels(labels)
+>>> myContour.setDrawLabels(drawLabels)
 >>> myGraph.add(myContour)"
 
 
@@ -125,8 +111,8 @@ isFilled : bool
 Examples
 --------
 >>> import openturns as ot
->>> print(ot.Contour(2,2,ot.Sample(4,1),True).isFilled())
-True
+>>> print(ot.Contour(2,2,ot.Sample(4,1)).isFilled())
+False
 
 See Also
 --------
@@ -159,7 +145,7 @@ colorBarPosition : str
 Examples
 --------
 >>> import openturns as ot
->>> contour = ot.Contour(2,2,ot.Sample(4,1),True)
+>>> contour = ot.Contour(2,2,ot.Sample(4,1))
 >>> contour.setColorBarPosition('right')
 >>> print(contour.getColorBarPosition())
 right
