--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -300,6 +300,9 @@ ot_check_test (KFold_std)
 ot_check_test (LeastSquaresMetaModelSelectionFactory_std)
 ot_check_test (KissFFT_std)
 ot_check_test (FilonQuadrature_std)
+if (Cuba_FOUND)
+  ot_check_test (CubaIntegration_std IGNOREOUT)
+endif ()
 ot_check_test (GaussKronrod_std)
 ot_check_test (GaussLegendre_std)
 ot_check_test (FejerAlgorithm_std IGNOREOUT)
