--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -356,6 +356,9 @@ ot_pyinstallcheck_test (KarhunenLoeveValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (P1LagrangeInterpolation_std)
 ot_pyinstallcheck_test (P1LagrangeEvaluation_std IGNOREOUT)
 ot_pyinstallcheck_test (SimplicialCubature_std IGNOREOUT)
+if (Cuba_FOUND)
+  ot_pyinstallcheck_test (CubaIntegration_std IGNOREOUT)
+endif ()
 
 ## Model
 ot_pyinstallcheck_test (StandardEvent_std)
