--- a/python/src/OptimizationResult_doc.i.in
+++ b/python/src/OptimizationResult_doc.i.in
@@ -366,7 +366,7 @@ statusMessage : str
 Parameters
 ----------
 status : int
-    Status flag, possible values SUCCESS, FAILURE, TIMEOUT, INTERRUPTION"
+    Status flag, possible values SUCCESS, FAILURE, TIMEOUT, INTERRUPTION, MAXIMUMCALLS"
 
 // ---------------------------------------------------------------------
 
@@ -376,7 +376,7 @@ status : int
 Returns
 -------
 status : int
-    Status flag, possible values SUCCESS, FAILURE, TIMEOUT, INTERRUPTION"
+    Status flag, possible values SUCCESS, FAILURE, TIMEOUT, INTERRUPTION, MAXIMUMCALLS"
 
 // ---------------------------------------------------------------------
 
