Doc: Replace integer by int

--- a/python/src/CleaningStrategy_doc.i.in
+++ b/python/src/CleaningStrategy_doc.i.in
@@ -99,7 +99,7 @@ significance factor :math:`10^{-4}`.
 
 Returns
 -------
-index : integer
+index : int
     Current index of the basis term."
 
 // ---------------------------------------------------------------------
