--- a/python/src/CubaIntegration_doc.i.in
+++ b/python/src/CubaIntegration_doc.i.in
@@ -143,7 +143,7 @@ algorithmName : str
 
 Returns
 -------
-N : integer
+N : int
     The maximal number of times the algorithm will attempt to call the integrand."
 
 // ---------------------------------------------------------------------
@@ -153,6 +153,6 @@ N : integer
 
 Parameters
 ----------
-N : integer, :math:`N>0`
+N : int, :math:`N>0`
     The maximal number of times the algorithm will attempt to call the integrand."
 
