--- a/python/src/HyperbolicAnisotropicEnumerateFunction_doc.i.in
+++ b/python/src/HyperbolicAnisotropicEnumerateFunction_doc.i.in
@@ -12,7 +12,7 @@ Available constructors:
 
 Parameters
 ----------
-dim : integer
+dim : int
     Dimension of the :class:`~openturns.EnumerateFunction`. *dim* must be equal
     to the dimension of the :class:`~openturns.OrthogonalBasis`.
 q : float
