--- a/python/src/LinearBasisFactory_doc.i.in
+++ b/python/src/LinearBasisFactory_doc.i.in
@@ -10,7 +10,7 @@ The linear basis is the collection of functions :math:`\psi_k: \mathbb{R}^d \map
 
 Parameters
 ----------
-dimension : integer
+dimension : int
     Input dimension :math:`d` of the basis.
 
 See also
